@@ -1,0 +1,22 @@
+<?php
+   /** Author:       Ray Black
+       Date:         August 15, 2000
+       Theme Name:   "BluesNews"
+	   Comments:     In the long tradition of mimicing popular sites, I bring
+	                 you the 'inspired by BluesNews.com' theme. Simple, high-
+					 contrast colorset, easy to read with very little eye strain.
+    **/
+
+    $color[0]   = "#181818"; // (off-black)			TitleBar
+    $color[1]   = "#A0A0A0"; // (gray)				Quoted Replies in Emails
+    $color[2]   = "#800000"; // (red)				Warning/Error Messages
+    $color[3]   = "#000000"; // (black)				Left Bar Background
+    $color[4]   = "#000000"; // (black)				Normal Background
+    $color[5]   = "#000080"; // (bright blue)		Table Headers
+    $color[6]   = "#FFFF80"; // (bright yellow)		Text on left bar
+    $color[7]   = "#FFFF80"; // (bright yellow)		Links
+    $color[8]   = "#FFFFFF"; // (white)				Normal text
+    $color[9]   = "#000080"; // (bright blue)		Darker version of #0
+    $color[10]  = "#000080"; // (bright blue)		Darker version of #9
+    $color[11]  = "#3333FF"; // (dull blue)			Special Folders color
+?>
