@@ -1,0 +1,25 @@
+<?php
+   /** Author:       Ray Black
+       Date:         August 15, 2000
+       Theme Name:   "Maize"
+	   Comments:     Staying with the 'South of the border food' theme,
+	                 I bring you Maize to accompany Black Bean Burrito.
+					 As the Furbies say: Yum! Oh, message highlighting
+					 looks best with colors in the neighborhood of
+					 #7A6A50, bumping up the red, green and blue where
+					 necessary.
+    **/
+
+    $color[0]   = "#B0B0B0"; // (gray)				TitleBar
+    $color[1]   = "#A04040"; // (dull red)			Quoted Replies in Emails
+    $color[2]   = "#F04040"; // (bright red)		Warning/Error Messages
+    $color[3]   = "#DFCFBF"; // (antique white)		Left Bar Background
+    $color[4]   = "#DFCFBF"; // (antique white)		Normal Background
+    $color[5]   = "#755A45"; // (light brown)		Table Headers
+    $color[6]   = "#101010"; // (off-black)			Text on left bar
+    $color[7]   = "#800000"; // (red)				Links
+    $color[8]   = "#000000"; // (black)				Normal text
+    $color[9]   = "#909090"; // (darker gray)		Darker version of #0
+    $color[10]  = "#606060"; // (darkest gray)		Darker version of #9
+    $color[11]  = "#600000"; // (lighter red)		Special Folders color
+?>
