@@ -1,5 +1,6 @@
 Version 0.5pre2 -- DEVELOPMENT
 ------------------------------
+- Added quite a few new themes
 - Fixed double folder problem on some servers
 - Using encryption for passwords
 - Added a patch from Bill Thousand to allow easier virtual domains
